--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
+  "alias": {
+    "#components": "./src/components"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
